--- a/index.html
+++ b/index.html
@@ -57,170 +57,7 @@
 			</div>
 
 			<div id="wrapper">
-				<div class="parking">
-					<div class="row">
-						<div class="column">
-							<div class="place">
-								<h1>A01</h1>
-							</div>
-							<div class="place">
-								<h1>A02</h1>
-							</div>
-							<div class="place">
-								<h1>A03</h1>
-							</div>
-							<div class="place">
-								<h1>A04</h1>
-							</div>
-							<div class="place">
-								<h1>A05</h1>
-							</div>
-							<div class="place">
-								<h1>A08</h1>
-							</div>
-							<div class="place">
-								<h1>A09</h1>
-							</div>
-							<div class="place">
-								<h1>A10</h1>
-							</div>
-						</div>
-						<div class="column">
-							<div class="place">
-								<h1>A06</h1>
-							</div>
-							<div class="place">
-								<h1>A11</h1>
-							</div>
-							<div class="place">
-								<h1>A12</h1>
-							</div>
-							<div class="place">
-								<h1>A13</h1>
-							</div>
-							<div class="place">
-								<h1>A07</h1>
-							</div>
-							<div class="place">
-								<h1>A14</h1>
-							</div>
-							<div class="place">
-								<h1>A15</h1>
-							</div>
-							<div class="place">
-								<h1>A16</h1>
-							</div>
-						</div>
-					</div>
-					<div class="row">
-						<div class="column">
-							<div class="place">
-								<h1>B01</h1>
-							</div>
-							<div class="place">
-								<h1>B02</h1>
-							</div>
-							<div class="place">
-								<h1>B03</h1>
-							</div>
-							<div class="place">
-								<h1>B04</h1>
-							</div>
-							<div class="place">
-								<h1>B05</h1>
-							</div>
-							<div class="place">
-								<h1>B06</h1>
-							</div>
-							<div class="place">
-								<h1>B07</h1>
-							</div>
-							<div class="place">
-								<h1>B08</h1>
-							</div>
-						</div>
-						<div class="column">
-							<div class="place">
-								<h1>B09</h1>
-							</div>
-							<div class="place">
-								<h1>B10</h1>
-							</div>
-							<div class="place">
-								<h1>B11</h1>
-							</div>
-							<div class="place">
-								<h1>B12</h1>
-							</div>
-							<div class="place">
-								<h1>B13</h1>
-							</div>
-							<div class="place">
-								<h1>B14</h1>
-							</div>
-							<div class="place">
-								<h1>B15</h1>
-							</div>
-							<div class="place">
-								<h1>B16</h1>
-							</div>
-						</div>
-					</div>
-					<div class="row">
-						<div class="column">
-							<div class="place">
-								<h1>C01</h1>
-							</div>
-							<div class="place">
-								<h1>C02</h1>
-							</div>
-							<div class="place">
-								<h1>C03</h1>
-							</div>
-							<div class="place">
-								<h1>C04</h1>
-							</div>
-							<div class="place">
-								<h1>C05</h1>
-							</div>
-							<div class="place">
-								<h1>C06</h1>
-							</div>
-							<div class="place">
-								<h1>C07</h1>
-							</div>
-							<div class="place">
-								<h1>C08</h1>
-							</div>
-						</div>
-						<div class="column">
-							<div class="place">
-								<h1>C09</h1>
-							</div>
-							<div class="place">
-								<h1>C10</h1>
-							</div>
-							<div class="place">
-								<h1>C11</h1>
-							</div>
-							<div class="place">
-								<h1>C12</h1>
-							</div>
-							<div class="place">
-								<h1>C13</h1>
-							</div>
-							<div class="place">
-								<h1>C14</h1>
-							</div>
-							<div class="place">
-								<h1>C15</h1>
-							</div>
-							<div class="place">
-								<h1>C16</h1>
-							</div>
-						</div>
-					</div>
-				</div>
+				<!-- ЗМІНЮВАЛЬНИЙ КОНТЕНТ -->
 			</div>
 		</div>
 
